<resources>
    <string name="app_name">INI KALKULATOR</string>
    <string name="viewKalkulator">95+5</string>
    <string name="viewHasil">100</string>
    <string name="x">x</string>
    <string name="pembagian">÷</string>
    <string name="persentase">%</string>
    <string name="clear">C</string>
    <string name="delete"><![CDATA[<]]></string>
    <string name="kurang">-</string>
    <string name="tambah">+</string>
    <string name="sama_dengan">=</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="enam">6</string>
    <string name="lima">5</string>
    <string name="empat">4</string>
    <string name="tiga">3</string>
    <string name="dua">2</string>
    <string name="satu">1</string>
    <string name="koma">,</string>
    <string name="nol">0</string>
</resources>